array.island.Island.scala.error
Compilation error:
Island:15: error: ':' expected but ')' found.
def longueur(num) {
                ^Island:22: error: identifier expected but '}' found.
}
^